--- a/checkpoint-three - EV- Shae Honesty.ipynb
+++ b/checkpoint-three - EV- Shae Honesty.ipynb
@@ -18,11 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "azdata_cell_guid": "e8adef8e-d0f2-4640-a179-5997f11e82ca"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sqroo\\AppData\\Local\\Temp\\ipykernel_19240\\2502121103.py:7: DtypeWarning: Columns (15,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_WAEV = pd.read_csv(r\"C:\\Users\\sqroo\\Desktop\\DA\\Final Project\\Electric_Vehicle_Population_Data (2).csv\")\n"
+     ]
+    }
+   ],
    "source": [
     "# import libraries\n",
     "import pandas as pd\n",
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "azdata_cell_guid": "e1dc66ef-e471-4c27-92e7-ee878c106eba"
    },
@@ -58,7 +67,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 210165 entries, 0 to 210164\n",
-      "Data columns (total 17 columns):\n",
+      "Data columns (total 19 columns):\n",
       " #   Column                                             Non-Null Count   Dtype  \n",
       "---  ------                                             --------------   -----  \n",
       " 0   VIN (1-10)                                         210165 non-null  object \n",
@@ -76,10 +85,12 @@
       " 12  Legislative District                               209720 non-null  float64\n",
       " 13  DOL Vehicle ID                                     210165 non-null  int64  \n",
       " 14  Vehicle Location                                   210155 non-null  object \n",
-      " 15  Electric Utility                                   210161 non-null  object \n",
-      " 16  2020 Census Tract                                  210161 non-null  float64\n",
-      "dtypes: float64(5), int64(2), object(10)\n",
-      "memory usage: 27.3+ MB\n",
+      " 15  Long                                               210165 non-null  object \n",
+      " 16  Lat                                                210165 non-null  object \n",
+      " 17  Electric Utility                                   210161 non-null  object \n",
+      " 18  2020 Census Tract                                  210161 non-null  float64\n",
+      "dtypes: float64(5), int64(2), object(12)\n",
+      "memory usage: 30.5+ MB\n",
       "0         0.0\n",
       "1         0.0\n",
       "2         0.0\n",
@@ -140,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,6 +173,8 @@
       "Legislative District                                 445\n",
       "DOL Vehicle ID                                         0\n",
       "Vehicle Location                                      10\n",
+      "Long                                                   0\n",
+      "Lat                                                    0\n",
       "Electric Utility                                       4\n",
       "2020 Census Tract                                      4\n",
       "dtype: int64\n",
@@ -192,11 +205,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "azdata_cell_guid": "efed50ae-16f0-471d-98e2-632553a74c12"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Electric Range\n",
+      "0.0      118654\n",
+      "215.0      6345\n",
+      "32.0       5023\n",
+      "25.0       4445\n",
+      "21.0       4282\n",
+      "          ...  \n",
+      "11.0          4\n",
+      "51.0          4\n",
+      "95.0          3\n",
+      "57.0          2\n",
+      "74.0          2\n",
+      "Name: count, Length: 105, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# print(df_WAEV['Clean Alternative Fuel Vehicle (CAFV) Eligibility'])\n",
     "WAEV_CAFV_counts = df_WAEV.value_counts('Clean Alternative Fuel Vehicle (CAFV) Eligibility')\n",
@@ -221,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {
     "azdata_cell_guid": "e788a239-2fbf-41de-9bd3-19e52e3b187c"
    },
@@ -234,7 +267,8 @@
       "       'Make', 'Model', 'Electric Vehicle Type',\n",
       "       'Clean Alternative Fuel Vehicle (CAFV) Eligibility', 'Electric Range',\n",
       "       'Base MSRP', 'Legislative District', 'DOL Vehicle ID',\n",
-      "       'Vehicle Location', 'Electric Utility', '2020 Census Tract'],\n",
+      "       'Vehicle Location', 'Long', 'Lat', 'Electric Utility',\n",
+      "       '2020 Census Tract'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -258,6 +292,85 @@
     "## Inconsistent Data\n",
     "\n",
     "Check for inconsistent data and address any that arises. As always, use code comments to illustrate your thought process."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum Model Year: 1999\n",
+      "Maximum Model Year: 2025\n",
+      "[2021 2018 2016 2019 2015 2020 2017 2024 2012 2022 2023 2013 2011 2014\n",
+      " 2008 2010 2000 2002 1999 2003]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate the min and max of the year to look for outlieers\n",
+    "min_model_year = df_WAEV['Model Year'].min()\n",
+    "max_model_year = df_WAEV['Model Year'].max()\n",
+    "\n",
+    "print(\"Minimum Model Year:\", min_model_year)\n",
+    "print(\"Maximum Model Year:\", max_model_year)\n",
+    "# Exclude the year 2025 as it has not gotten started yet it represents and inaccurate amount of data for the year\n",
+    "\n",
+    "# Remove 2025 from 'Model Year' column\n",
+    "df_WAEV = df_WAEV[df_WAEV['Model Year'] != 2025]\n",
+    "\n",
+    "# Verify the removal by checking the unique values in 'Model Year'\n",
+    "print(df_WAEV['Model Year'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outlier values in 'Model Year':\n",
+      "        Model Year\n",
+      "13            2012\n",
+      "93            2011\n",
+      "110           2011\n",
+      "115           2012\n",
+      "118           2012\n",
+      "...            ...\n",
+      "209594        2012\n",
+      "209596        2012\n",
+      "209649        2012\n",
+      "209938        2012\n",
+      "210097        2012\n",
+      "\n",
+      "[2311 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate Q1 and Q3 and IQR\n",
+    "Q1 = df_WAEV['Model Year'].quantile(0.25)\n",
+    "Q3 = df_WAEV['Model Year'].quantile(0.75)\n",
+    "\n",
+    "IQR = Q3 - Q1\n",
+    "\n",
+    "# Define the lower and upper bounds for outliers\n",
+    "lower_bound = Q1 - 1.5 * IQR\n",
+    "upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "\n",
+    "outliers = df_WAEV[(df_WAEV['Model Year'] < lower_bound) | (df_WAEV['Model Year'] > upper_bound)]\n",
+    "unique_outliers = outliers['Model Year'].unique()\n",
+    "\n",
+    "print(\"Outlier values in 'Model Year':\")\n",
+    "print(outliers[['Model Year']])\n",
+    "# No additional years are demend as outliers."
    ]
   },
   {
@@ -323,18 +436,18 @@
       "210158        0.0                  13.0       263304688   \n",
       "210164        0.0                   6.0       241306740   \n",
       "\n",
-      "                       Vehicle Location  \\\n",
-      "1       POINT (-122.6368884 47.7469547)   \n",
-      "3       POINT (-122.6231895 47.5930874)   \n",
-      "4           POINT (-122.13158 47.67858)   \n",
-      "5         POINT (-122.206146 47.839957)   \n",
-      "6       POINT (-122.2003346 47.4487206)   \n",
-      "...                                 ...   \n",
-      "210151    POINT (-117.308052 47.667462)   \n",
-      "210153  POINT (-122.8826643 48.5053168)   \n",
-      "210154   POINT (-122.3499053 47.673887)   \n",
-      "210158  POINT (-120.9347811 47.1944758)   \n",
-      "210164  POINT (-117.4268937 47.7323627)   \n",
+      "                 Vehicle Location          Long         Lat  \\\n",
+      "1       (-122.6368884 47.7469547)   -122.636888   47.746955   \n",
+      "3       (-122.6231895 47.5930874)   -122.623189   47.593087   \n",
+      "4           (-122.13158 47.67858)    -122.13158    47.67858   \n",
+      "5         (-122.206146 47.839957)   -122.206146   47.839957   \n",
+      "6       (-122.2003346 47.4487206)   -122.200335   47.448721   \n",
+      "...                           ...           ...         ...   \n",
+      "210151    (-117.308052 47.667462)   -117.308052   47.667462   \n",
+      "210153  (-122.8826643 48.5053168)  -122.8826643  48.5053168   \n",
+      "210154   (-122.3499053 47.673887)  -122.3499053   47.673887   \n",
+      "210158  (-120.9347811 47.1944758)  -120.9347811  47.1944758   \n",
+      "210164  (-117.4268937 47.7323627)  -117.4268937  47.7323627   \n",
       "\n",
       "                                         Electric Utility  2020 Census Tract  \n",
       "1                                  PUGET SOUND ENERGY INC       5.303509e+10  \n",
@@ -349,7 +462,7 @@
       "210158                             PUGET SOUND ENERGY INC       5.303798e+10  \n",
       "210164  BONNEVILLE POWER ADMINISTRATION||AVISTA CORP||...       5.306301e+10  \n",
       "\n",
-      "[54675 rows x 17 columns]\n"
+      "[54621 rows x 19 columns]\n"
      ]
     }
    ],
@@ -361,15 +474,15 @@
     "\n",
     "# Checking numerical values\n",
     "numerical_cols = df_WAEV.select_dtypes(include=['number']).columns\n",
-    "# IQR for each numeric column\n",
+    "# Q1 and Q3 and IQR\n",
     "Q1 = df_WAEV[numerical_cols].quantile(0.25)\n",
     "Q3 = df_WAEV[numerical_cols].quantile(0.75)\n",
     "IQR = Q3 - Q1\n",
-    "# Outlier threshold (1.5 * IQR)\n",
+    "# Outlier limits\n",
     "outliers = (df_WAEV[numerical_cols] < (Q1 - 1.5 * IQR)) | (df_WAEV[numerical_cols] > (Q3 + 1.5 * IQR))\n",
     "outlier_rows = df_WAEV[outliers.any(axis=1)]\n",
     "print(outlier_rows)\n",
-    "# None of the worries listed show concern of outliers"
+    "# None of the columns listed show concern of outliers"
    ]
   },
   {
@@ -383,8 +496,18 @@
     "Make note of your answers to the following questions.\n",
     "\n",
     "1. Did you find all four types of dirty data in your dataset?\n",
+    "\n",
+    "    There was missing MSRP data. There was irregular, unnecessary, and inconsistent data found. The irregular data found was within the Electric range. Upon further research and examination it was determined that some manufactures' do not list the range or list a very low range that demines it ineligible for Clean Alternative Fuel Vehicle. I checked with a number of the manufacturer websites to ensure that the lower ranges were accurate and true. \n",
+    "\n",
+    "\n",
     "2. Did the process of cleaning your data give you new insights into your dataset?\n",
-    "3. Is there anything you would like to make note of when it comes to manipulating the data and making visualizations?"
+    "\n",
+    "    Yes, the discovery about the Electrice range mentioned in question #1 was inlightening. \n",
+    "\n",
+    "\n",
+    "3. Is there anything you would like to make note of when it comes to manipulating the data and making visualizations?\n",
+    "\n",
+    "    I would make note of the reason for the wide range in the Electic Range listed in question #1. The max value n the model year is 2025. Given that car manufatures do produce vehicles in the year prior to the described model year this understandable. However, given that the dataset was produced as of October 19, 2024 this isnt an adequate representation of 2025 Model Year electric vehicles owned at the time. "
    ]
   }
  ],
